Activities user cache: fix URL to owner + fix settings page when buttons are too large + make sure avatars don't display too big + grids in item views have proper spacing on mobile + new setting can be set in models: text_image_for_prefetched

--- a/magi/static/less/main.less
+++ b/magi/static/less/main.less
@@ -352,7 +352,7 @@
     .flex-tr {
         display: flex;
         border-bottom: solid 1px @table-border-color;
-        &.no-bottom {
+        &:last-child {
             border-bottom: 0;
         }
     }
@@ -382,6 +382,29 @@
     &.with-border, &.with-bottom-border {
         .flex-tr:last-child {
             border-bottom: solid 1px @table-border-color;
+        }
+    }
+    &.table-rounded {
+        &> .flex-tr:first-child {
+            .flex-td:first-child {
+                border-top-left-radius: 10px;
+            }
+            .flex-td:last-child {
+                border-top-right-radius: 10px;
+            }
+        }
+        &> .flex-tr:last-child {
+            .flex-td:first-child {
+                border-bottom-left-radius: 10px;
+            }
+            .flex-td:last-child {
+                border-bottom-right-radius: 10px;
+            }
+        }
+    }
+    &.table-padded {
+        .flex-td {
+            padding: 20px;
         }
     }
 }
@@ -507,6 +530,10 @@
         .image {
             max-width: 100%;
         }
+        // Avatar (when loading default, will not use the max width)
+        [href^="/user/"] > .image[src*="s=200"] {
+            max-width: 200px;
+        }
         .color-viewer {
             border-radius: 50%;
             width: 30px;
@@ -542,6 +569,24 @@
         }
     }
 
+}
+
+ @media(max-width: @screen-sm-max) {
+     .about-flex-table, .flex-table.collection-table {
+         .field-content {
+             &> .row {
+                 margin-bottom: 0;
+             }
+             [class^="col-"] {
+                 margin-bottom: 5px;
+             }
+         }
+     }
+}
+
+// Avatar (when loading default, will not use the max width)
+[href^="/user/"] > img[src*="s=200"] {
+    max-width: 200px;
 }
 
 .popover-content {
@@ -2417,7 +2462,7 @@ nav {
 }
 
 .table-color(@color, @inverse) {
-    td {
+    td, .flex-td {
         background-color: @color;
         color: @inverse;
         .a-variant(@inverse);
@@ -2987,7 +3032,7 @@ nav {
     }
 }
 
-.blocked-info, .default-blocked-in-list, .table-blocked tr, .staff-only {
+.blocked-info, .default-blocked-in-list, .table-blocked tr, .table-blocked .flex-td, .staff-only {
     background: linear-gradient(45deg, rgba(255,255,255,0.2) 25%, rgba(0,0,0,0) 25%, rgba(0,0,0,0) 50%, rgba(255,255,255,0.2) 50%, rgba(255,255,255,0.2) 75%, rgba(0,0,0,0) 75%, rgba(0,0,0,0) 0), rgba(237,237,237,1);
     background-size: 50px 50px;
 }
